--- a/circle.yml
+++ b/circle.yml
@@ -1,29 +1,10 @@
-machine:
-  node:
-    version: 6
 
-dependencies:
-  pre:
-    - npm install
-
-test:
-  pre:
-    ## runs the 'start' script which
-    ## boots our local app server on port 8080
-    ## which cypress expects to be running
-    - npm start:
-        background: true
-  override:
-    ## now run cypress headlessly
-    ## and record all of the tests.
-    ## Cypress will search for a
-    ## CYPRESS_RECORD_KEY environment
-    ## variable by default and apply
-    ## this to the run.
-    - npm run cypress:run -- --record
-
-    ## alternatively we could specify
-    ## a specific record key to use
-    ## like this without having to
-    ## configure environment variables
-    ## - npm run cypress:run -- --record --key <your_record_key>
+version: 2.1
+orbs:
+  # not specifying a version installs the latest version.
+  # specify a version of the orb with: cypress-io/cypress@x.x.x
+  cypress: cypress-io/cypress
+workflows:
+  build:
+    jobs:
+      - cypress/run # "run" job comes from "cypress" orb
