start server before tests

--- a/circle.yml
+++ b/circle.yml
@@ -5,4 +5,5 @@ orbs:
 workflows:
   build:
     jobs:
-      - cypress/run # "run" job comes from "cypress" orb
+      - cypress/run: # "run" job comes from "cypress" orb
+          start: 'npm start' # start server before running tests
