--- a/circle.yml
+++ b/circle.yml
@@ -5,5 +5,16 @@ orbs:
 workflows:
   build:
     jobs:
-      - cypress/run: # "run" job comes from "cypress" orb
+      # first get the source code and install npm dependencies
+      - cypress/install
+      - cypress/run:
+          # make sure app has been installed and built
+          # before running tests across multiple machines
+          # this avoids installing same dependencies 10 times
+          requires:
+            - cypress/install
+          record: true # record results on Cypress Dashboard
+          parallel: true # split all specs across machines
+          parallelism: 10 # use 10 CircleCI machines to finish quickly
+          group: 'all tests' # name this group "all tests" on the dashboard
           start: 'npm start' # start server before running tests
